US15555 - fixes scroll panel shift for some users

--- a/app/modules/accounts/style.scss
+++ b/app/modules/accounts/style.scss
@@ -476,7 +476,7 @@ span {
   min-height: 80px;
   min-width: 100%;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   table {
     border-top: 0;
